--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="index.js">
+        const name= 'mokul';
+        console.log(name);
+    </script>
 </body>
 </html>
