add line of code

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js">
-        const name= 'mokul';
-        console.log(name);
-    </script>
+    <h1> <script  src="index.js" >
+      
+    </script></h1>
 </body>
 </html>
